--- a/app/sprint/sprintList.html
+++ b/app/sprint/sprintList.html
@@ -16,22 +16,32 @@
         </div>
         <div class="box-body" >
             <button class="btn btn-block btn-primary btn-sm">Create new sprint</button>
+            <br/>
+
+            <!-- box for sprint add foreach here -->
+            <div class="col-md-12">
+                <p class="text-center">
+                    <strong>Sprint 1</strong>
+                </p>
+                <div class="progress-group">
+                    <span class="progress-text">Sprint 1</span>
+                    <div class="progress sm">
+                        <div class="progress-bar progress-bar-aqua" style="width: 80%"></div>
+                    </div>
+                </div><!-- /.progress-group -->
+
+            </div>
+            <!-- endforeach -->
         </div><!-- /.box-body -->
-        <div class="box-footer">
-            Footer
-        </div><!-- /.box-footer-->
     </div>
 </section>
 <section class="content col-lg-5" >
     <div class="box">
         <div class="box-header with-border">
-            <h3 class="box-title">Title</h3>
+            <h3 class="box-title">Backlog</h3>
         </div>
         <div class="box-body" >
-            Start creating your amazing application!
+           backlog list
         </div><!-- /.box-body -->
-        <div class="box-footer">
-            Footer
-        </div><!-- /.box-footer-->
     </div>
 </section><!-- /.content -->
