--- a/app/index.html
+++ b/app/index.html
@@ -261,9 +261,12 @@
   -->
 <script src="bower_components/angular/angular.js"></script>
 <script src="bower_components/angular-route/angular-route.js"></script>
+<script src="bower_components/angular-resource/angular-resource.js"></script>
 <script src="app.js"></script>
 <script src="backlog/backlogController.js"></script>
 <script src="sprint/sprintController.js"></script>
+<script src="sprint/services.js"></script>
+<script src="backlog/services.js"></script>
 <script src="components/version/version.js"></script>
 <script src="components/version/version-directive.js"></script>
 <script src="components/version/interpolate-filter.js"></script>
