--- a/app/index.html
+++ b/app/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
     <!-- Theme style -->
     <link rel="stylesheet" href="assets/libs/bootstrap/dist/css/AdminLTE.min.css">
+    <link rel="stylesheet" href="bower_components/jquery-ui/themes/smoothness/jquery-ui.css"/>
     <!-- AdminLTE Skins. Choose a skin from the css/skins
          folder instead of downloading all of them to reduce the load. -->
     <link rel="stylesheet" href="assets/libs/bootstrap/dist/css/skins/_all-skins.min.css">
@@ -260,8 +261,10 @@
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/x.x.x/angular.min.js"></script>
   -->
 <script src="bower_components/angular/angular.js"></script>
+<script src="bower_components/jquery-ui/ui/datepicker.js"></script>
 <script src="bower_components/angular-route/angular-route.js"></script>
 <script src="bower_components/angular-resource/angular-resource.js"></script>
+<script src="bower_components/angular-ui-date/src/date.js"></script>
 <script src="app.js"></script>
 <script src="backlog/backlogController.js"></script>
 <script src="sprint/sprintController.js"></script>
