--- a/app/backlog/backlogList.html
+++ b/app/backlog/backlogList.html
@@ -11,20 +11,29 @@
 </section>
 
 <!-- Main content -->
-<section class="content">
+<section class="content" >
     <div class="box">
         <div class="box-header with-border">
-            <h3 class="box-title">Title</h3>
-            <div class="box-tools pull-right">
-                <button class="btn btn-box-tool" data-widget="collapse" data-toggle="tooltip" title="Collapse"><i class="fa fa-minus"></i></button>
-                <button class="btn btn-box-tool" data-widget="remove" data-toggle="tooltip" title="Remove"><i class="fa fa-times"></i></button>
-            </div>
+            <h3 class="box-title">Sprints</h3>
         </div>
-        <div class="box-body">
-            Start creating your amazing application!
+        <div class="box-body" >
+            <button class="btn btn-block btn-primary btn-sm">Create new sprint</button>
+            <br/>
+
+            <!-- box for sprint add foreach here -->
+            <div class="col-md-12">
+                <p class="text-center">
+                    <strong>Sprint 1</strong>
+                </p>
+                <div class="progress-group">
+                    <span class="progress-text">Sprint 1</span>
+                    <div class="progress sm">
+                        <div class="progress-bar progress-bar-aqua" style="width: 80%"></div>
+                    </div>
+                </div><!-- /.progress-group -->
+
+            </div>
+            <!-- endforeach -->
         </div><!-- /.box-body -->
-        <div class="box-footer">
-            Footer
-        </div><!-- /.box-footer-->
     </div>
-</section><!-- /.content -->
+</section>
