--- a/app/index.html
+++ b/app/index.html
@@ -262,6 +262,7 @@
   -->
 <script src="bower_components/angular/angular.js"></script>
 <script src="bower_components/jquery-ui/ui/datepicker.js"></script>
+<script src="bower_components/angular-ui-sortable/sortable.js"></script>
 <script src="bower_components/angular-route/angular-route.js"></script>
 <script src="bower_components/angular-resource/angular-resource.js"></script>
 <script src="bower_components/angular-ui-date/src/date.js"></script>
