--- a/app/backlog/backlogEdit.html
+++ b/app/backlog/backlogEdit.html
@@ -30,4 +30,7 @@
             </div>
         </form>
     </div><!-- /.box-body -->
+    <div class="box-footer">
+        <button type="submit" class="btn btn-info pull-right" ng-click="save()">Save</button>
+    </div>
 </div>
