--- a/app/sprint/sprintEdit.html
+++ b/app/sprint/sprintEdit.html
@@ -1,37 +1,52 @@
-<div class="box box-warning">
-    <div class="box-header with-border">
-        <h3 class="box-title">Sprint</h3>
-    </div><!-- /.box-header -->
-    <div class="box-body">
-        <form role="form">
-            <!-- text input -->
-            <div class="form-group">
-                <label>Name</label>
-                <input type="text" class="form-control" placeholder="Sprint Name">
+<section class="content">
+    <div class="col-md-12">
+        <div class="box box-primary">
+            <div class="box-header with-border">
+                <h3 class="box-title">Sprint</h3>
             </div>
-            <!-- textarea -->
-            <div class="form-group">
-                <label>Description</label>
-                <textarea class="form-control" rows="3" ></textarea>
-            </div>
-            <div class="form-group">
-                <label>Start date:</label>
-                <div class="input-group">
-                    <div class="input-group-addon">
-                        <i class="fa fa-calendar"></i>
+            <!-- /.box-header -->
+            <div class="box-body">
+                <form role="form">
+                    <!-- text input -->
+                    <div class="form-group">
+                        <label>Name</label>
+                        <input type="text" class="form-control" placeholder="Sprint Name">
                     </div>
-                    <input type="text" ui-date="dateOptions" name="DateOfBirth" class="form-control pull-right active"  id="start_date">
-                </div><!-- /.input group -->
-            </div>
-            <div class="form-group">
-                <label>End date:</label>
-                <div class="input-group">
-                    <div class="input-group-addon">
-                        <i class="fa fa-calendar"></i>
+                    <!-- textarea -->
+                    <div class="form-group">
+                        <label>Description</label>
+                        <textarea class="form-control" rows="3"></textarea>
                     </div>
-                    <input type="text" ui-date="dateOptions" name="DateOfBirth" class="form-control pull-right active"  id="end_date">
-                </div><!-- /.input group -->
+                    <div class="form-group">
+                        <label>Start date:</label>
+
+                        <div class="input-group">
+                            <div class="input-group-addon">
+                                <i class="fa fa-calendar"></i>
+                            </div>
+                            <input type="text" ui-date="dateOptions" name="DateOfBirth"
+                                   class="form-control pull-right active" id="start_date">
+                        </div>
+                        <!-- /.input group -->
+                    </div>
+                    <div class="form-group">
+                        <label>End date:</label>
+
+                        <div class="input-group">
+                            <div class="input-group-addon">
+                                <i class="fa fa-calendar"></i>
+                            </div>
+                            <input type="text" ui-date="dateOptions" name="DateOfBirth"
+                                   class="form-control pull-right active" id="end_date">
+                        </div>
+                        <!-- /.input group -->
+                    </div>
+                </form>
             </div>
-        </form>
-    </div><!-- /.box-body -->
-</div>
+            <!-- /.box-body -->
+            <div class="box-footer">
+                <button type="submit" class="btn btn-info pull-right" ng-click="save()">Save</button>
+            </div>
+        </div>
+    </div>
+</section>
