--- a/app/backlog/backlogList.html
+++ b/app/backlog/backlogList.html
@@ -4,7 +4,6 @@
         <small>Create and Edit tasks</small>
     </h1>
     <ol class="breadcrumb">
-        <li><a href="#"><i class="fa fa-dashboard"></i> Home</a></li>
         <li><a href="#/dashboard">Layout</a></li>
         <li class="active">Backlog</li>
     </ol>
@@ -14,23 +13,17 @@
 <section class="content" >
     <div class="box">
         <div class="box-header with-border">
-            <h3 class="box-title">Sprints</h3>
+            <h3 class="box-title">Backlog</h3>
         </div>
         <div class="box-body" >
-            <button class="btn btn-block btn-primary btn-sm">Create new sprint</button>
+            <button class="btn btn-block btn-primary btn-sm">Create new backlog</button>
             <br/>
 
             <!-- box for sprint add foreach here -->
             <div class="col-md-12">
-                <p class="text-center">
-                    <strong>Sprint 1</strong>
+                <p class="text-center" ng-repeat="backlog in backlogs | orderBy:'name'">
+                    <strong><a href="#/backlog:{{backlog.id}}">{{backlog.name}}</a></strong>
                 </p>
-                <div class="progress-group">
-                    <span class="progress-text">Sprint 1</span>
-                    <div class="progress sm">
-                        <div class="progress-bar progress-bar-aqua" style="width: 80%"></div>
-                    </div>
-                </div><!-- /.progress-group -->
 
             </div>
             <!-- endforeach -->
