--- a/app/index.html
+++ b/app/index.html
@@ -269,6 +269,7 @@
 <script src="app.js"></script>
 <script src="backlog/backlogController.js"></script>
 <script src="sprint/sprintController.js"></script>
+<script src="dashboard/dashboardController.js"></script>
 <script src="sprint/services.js"></script>
 <script src="backlog/services.js"></script>
 </body>
