--- a/app/sprint/sprintList.html
+++ b/app/sprint/sprintList.html
@@ -19,9 +19,13 @@
 
             <!-- box for sprint add foreach here -->
             <div class="col-md-12"  >
-                <div class="text-center" ng-repeat="sprint in sprints | orderBy:'name'">
+                <div class="text-center" ng-repeat="sprint in sprints track by $index | orderBy:'name'">
+                    <button class="btn btn-info pull-right" ng-if="sprint.status === undefined" ng-click="startSprint(sprint,'started')">start this sprint</button>
+                    <button class="btn btn-info pull-right" ng-if="sprint.status === 'started'" ng-click="startSprint(sprint,'completed')">complete this sprint</button>
+                    <br/>
+                    <br/>
                     <strong><a href="#/sprint/{{sprint.id}}">{{sprint.name}}</a></strong>
-                    <ul ui-sortable="sortableOptions" class="sprints_list" ng-model="sprint.backlogs" style="height: 50px">
+                    <ul ui-sortable="sortableOptions" class="sprints_list" ng-model="sprint.backlogs" style="min-height: 50px">
                         <li ng-repeat="backlog in sprint.backlogs">{{backlog.name}}</li>
                     </ul>
                 </div>
