--- a/app/sprint/sprintList.html
+++ b/app/sprint/sprintList.html
@@ -18,17 +18,36 @@
             <br/>
 
             <!-- box for sprint add foreach here -->
+
             <div class="col-md-12"  >
-                <div class="text-center" ng-repeat="sprint in sprints track by $index | orderBy:'name'">
-                    <button class="btn btn-info pull-right" ng-if="sprint.status === undefined" ng-click="startSprint(sprint,'started')">start this sprint</button>
-                    <button class="btn btn-info pull-right" ng-if="sprint.status === 'started'" ng-click="startSprint(sprint,'completed')">complete this sprint</button>
-                    <br/>
-                    <br/>
-                    <strong><a href="#/sprint/{{sprint.id}}">{{sprint.name}}</a></strong>
-                    <ul ui-sortable="sortableOptions" class="sprints_list" ng-model="sprint.backlogs" style="min-height: 50px">
-                        <li ng-repeat="backlog in sprint.backlogs">{{backlog.name}}</li>
-                    </ul>
+                <div class="col-md-12 col-sm-6 col-xs-12"  ng-repeat="sprint in sprints track by $index | orderBy:'name'">
+                    <div class="info-box">
+                        <button class="btn btn-info pull-right" ng-if="sprint.status === undefined" ng-click="startSprint(sprint,'started')">start this sprint</button>
+                        <button class="btn btn-info pull-right" ng-if="sprint.status === 'started'" ng-click="startSprint(sprint,'completed')">complete this sprint</button>
+                        <span class="info-box-icon bg-yellow"><i class="fa fa-files-o"></i></span>
+                        <div class="info-box-content">
+                            <span class="info-box-text"><strong><a href="#/sprint/{{sprint.id}}">{{sprint.name}}</a></strong></span>
+                            <span class="info-box-number">
+                                <ul ui-sortable="sortableOptions" class="sprints_list" ng-model="sprint.backlogs" style="min-height: 50px; display:inline-block;list-style-type: none;">
+                                    <li ng-repeat="backlog in sprint.backlogs">
+                                        <div class="col-md-12" >
+                                            <div class="col-md-12 col-sm-6 col-xs-12">
+                                                <div class="info-box">
+                                                    <span class="info-box-icon bg-green"><i class="fa fa-flag-o"></i></span>
+                                                    <div class="info-box-content">
+                                                        <span class="info-box-text"><a href="#/backlog/{{backlog.id}}">{{backlog.name}}/{{backlog.status}}</a></span>
+                                                        <span class="info-box-number">{{backlog.description}}</span>
+                                                    </div><!-- /.info-box-content -->
+                                                </div><!-- /.info-box -->
+                                            </div>
+                                        </div>
+                                    </li>
+                                </ul>
+                            </span>
+                        </div><!-- /.info-box-content -->
+                    </div><!-- /.info-box -->
                 </div>
+
             </div>
         </div><!-- /.box-body -->
     </div>
