--- a/app/dashboard/dashboard.html
+++ b/app/dashboard/dashboard.html
@@ -2,12 +2,12 @@
 
     <div class="row">
         <div class="col-md-12">
-            <div class="box box-primary">
+            <div class="box box-primary" >
                 <div class="box-header">
                     <i class="fa fa-edit"></i>
                     <h3 class="box-title">Dashboard</h3>
                 </div>
-                <div class="box-body pad table-responsive">
+                <div class="box-body">
                     <p>You can drag & drop your tasks</p>
                     <table class="table table-bordered text-center">
                         <tbody>
@@ -17,11 +17,58 @@
                             <th>In progress</th>
                             <th>Done</th>
                         </tr>
-                        <tr ng-repeat="sprint in sprints track by $index | orderBy:'name'" >
+                        <tr ng-repeat="sprint in sprints track by $index | orderBy:'name'"  >
                             <td> {{sprint.name}} </td>
-                            <td > <ul class="to_do tasks_list" ui-sortable="sortableOptions" ng-model="sprint.backlogs" style="height: 50px;"><li ng-repeat="backlog in sprint.backlogs  | filter:query.status | orderBy:'name' "><span class="task">{{backlog.name}}</span></li> </ul></td>
-                            <td> <ul class="in_progress tasks_list" ui-sortable="sortableOptions" ng-model="sprint.backlogs" style="height: 50px;"><li ng-repeat="backlog in sprint.backlogs | filter:'in_progress' | orderBy:'name' "><span class="task">{{backlog.name}}</span></li></ul></td>
-                            <td> <ul class="done tasks_list" ui-sortable="sortableOptions" ng-model="sprint.backlogs" style="height: 50px;"><li ng-repeat="backlog in sprint.backlogs | filter:'done' | orderBy:'name' "><span class="task">{{backlog.name}}</span></li></ul></td>
+                            <td >
+                                <ul class="to_do tasks_list" ui-sortable="sortableOptions" ng-model="sprint.backlogs" style="height: 50px;list-style-type: none;display:inline-block;">
+                                    <li ng-repeat="backlog in sprint.backlogs  | filter:query.status | orderBy:'name' ">
+                                        <div class="col-md-5" >
+                                            <div class="col-md-12 col-sm-6 col-xs-12">
+                                                <div class="info-box">
+                                                    <span class="info-box-icon bg-green"><i class="fa fa-flag-o"></i></span>
+                                                    <div class="info-box-content">
+                                                        <span class="info-box-text"><a href="#/backlog/{{backlog.id}}">{{backlog.name}}/{{backlog.status}}</a></span>
+                                                        <span class="info-box-number">{{backlog.description}}</span>
+                                                    </div><!-- /.info-box-content -->
+                                                </div><!-- /.info-box -->
+                                            </div>
+                                        </div>
+                                    </li>
+                                </ul>
+                            </td>
+                            <td>
+                                <ul class="in_progress tasks_list" ui-sortable="sortableOptions" ng-model="sprint.backlogs" style="height: 50px;list-style-type: none;display:inline-block;">
+                                    <li ng-repeat="backlog in sprint.backlogs | filter:'in_progress' | orderBy:'name' ">
+                                        <div class="col-md-5" >
+                                            <div class="col-md-12 col-sm-6 col-xs-12">
+                                                <div class="info-box">
+                                                    <span class="info-box-icon bg-green"><i class="fa fa-flag-o"></i></span>
+                                                    <div class="info-box-content">
+                                                        <span class="info-box-text"><a href="#/backlog/{{backlog.id}}">{{backlog.name}}/{{backlog.status}}</a></span>
+                                                        <span class="info-box-number">{{backlog.description}}</span>
+                                                    </div><!-- /.info-box-content -->
+                                                </div><!-- /.info-box -->
+                                            </div>
+                                        </div>
+                                    </li>
+                                </ul>
+                            </td>
+                            <td>
+                                <ul class="done tasks_list" ui-sortable="sortableOptions" ng-model="sprint.backlogs" style="height: 50px;list-style-type: none;display:inline-block;">
+                                    <li ng-repeat="backlog in sprint.backlogs | filter:'done' | orderBy:'name' "><div class="col-md-12" >
+                                        <div class="col-md-5 col-sm-6 col-xs-12">
+                                            <div class="info-box">
+                                                <span class="info-box-icon bg-green"><i class="fa fa-flag-o"></i></span>
+                                                <div class="info-box-content">
+                                                    <span class="info-box-text"><a href="#/backlog/{{backlog.id}}">{{backlog.name}}/{{backlog.status}}</a></span>
+                                                    <span class="info-box-number">{{backlog.description}}</span>
+                                                </div><!-- /.info-box-content -->
+                                            </div><!-- /.info-box -->
+                                        </div>
+                                    </div>
+                                    </li>
+                                </ul>
+                            </td>
                         </tr>
                         </tbody></table>
                 </div><!-- /.box -->
